# embed1

./: README.md
gf-embed/: Cargo.toml
gf-embed/src/: lib.rs
make_embedding/: Cargo.toml
make_embedding/src/: embed_data.rs  lib.rs  main.rs
make_icon_embedding/: Cargo.toml
make_icon_embedding/src/: main.rs
make_icon_images/: Cargo.toml
make_icon_images/src/: main.rs
make_test_images/: Cargo.toml
make_test_images/src/: draw.rs  lib.rs  main.rs  shape.rs
query_embedding/: Cargo.toml
query_embedding/src/: main.rs
read-gf-metadata/: Cargo.toml
read-gf-metadata/src/: lib.rs  main.rs
