[package]
name = "make_icon_images"
version = "0.1.0"
edition = "2024"

[dependencies]
home.workspace = true
harfruzz = "0.1.0"
sleipnir = {path="../../sleipnir"}
make_test_images = {path="../make_test_images"}
kurbo.workspace = true
skrifa.workspace = true
memmap = "0.7.0"
tiny-skia = "0.11.4"
color = "0.3.0"
png = "0.17.16"
clap.workspace = true
regex.workspace = true