[package]
name = "make_test_images"
version = "0.1.0"
edition = "2024"

[dependencies]
home.workspace = true
harfruzz = { git = "https://github.com/harfbuzz/harfruzz" }
gf-metadata = { path = "../gf-metadata" }
kurbo = "0.11.2"
skrifa = "0.30.0"
memmap = "0.7.0"
tiny-skia = "0.11.4"
color = "0.3.0"
png = "0.17.16"
